[gd_scene load_steps=8 format=1]

[ext_resource path="res://script/AskPopup.gd" type="Script" id=1]
[ext_resource path="res://fnt/font32ptn.tres" type="DynamicFont" id=2]
[ext_resource path="res://images/ui/close_normal.png" type="Texture" id=3]
[ext_resource path="res://images/ui/close_press.png" type="Texture" id=4]
[ext_resource path="res://scenes/btn_normal_style.tres" type="StyleBox" id=5]
[ext_resource path="res://scenes/btn_press_style.tres" type="StyleBox" id=6]
[ext_resource path="res://audio/SampleList.tres" type="SampleLibrary" id=7]

[node name="AskPopup" type="Control"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -54.0
margin/top = -290.0
margin/right = -507.0
margin/bottom = -575.0
script/script = ExtResource( 1 )
Message = ""

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -493.0
margin/top = -903.0
margin/right = 962.0
margin/bottom = 1435.0
color = Color( 1, 1, 1, 0.15302 )

[node name="Background" type="ColorFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
color = Color( 0.223529, 0.258824, 0.392157, 1 )

[node name="Title" type="ColorFrame" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 2.0
color = Color( 0.901961, 0.298039, 0.396078, 1 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 72.0
margin/right = 453.0
margin/bottom = 200.0
custom_fonts/font = ExtResource( 2 )
text = "ASKMSG1"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btn_close" type="TextureButton" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 2.0
margin/right = 0.0
margin/bottom = 62.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btn_cancel" type="Button" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -10.0
margin/top = 70.0
margin/right = 20.0
margin/bottom = 20.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ASKCLOSE"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="btn_accept" type="Button" parent="."]

anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 70.0
margin/right = 10.0
margin/bottom = 20.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ASKOK"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = ExtResource( 7 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="btn_close" to="." method="_on_btn_close_pressed"]

[connection signal="pressed" from="btn_cancel" to="." method="_on_btn_cancel_pressed"]

[connection signal="pressed" from="btn_accept" to="." method="_on_btn_accept_pressed"]


